fixing login button alignment

--- a/front-end/src/components/Sidebar.module.css
+++ b/front-end/src/components/Sidebar.module.css
@@ -306,13 +306,14 @@ svg {
     }
     
     .loginItem {
+        align-content: center;
         display: block;
     }
     
     .sidebarLoginButton {
         padding: var(--space-sm);
         min-width: 0;
-        width: 30px;
+        width: 90px;
         height: 30px;
         border-radius: 50%;
         margin: 0;
